# chemtrend

./: .gitignore  README.md  package-lock.json  package.json
backend/: README.md  config.txt.example  pyproject.toml
backend/chemtrend/: database.py  main.py  mockup_data.py  models.py
database/: README.md  create_dummy_data.sql  create_objects.sql  import_trend_data.sql  update_public.sql
docs/: Gebruiksvoorwaarden-250121.docx  Welkom bij Chemtrend-250121.docx
frontend/: .env.example  README.md  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: BottomPanel.vue  DataTable.vue  Disclaimer.vue  MapComponent.vue  NavigationBar.vue  NavigationDrawerTabs.vue  SubstanceTab.vue  TourManager.vue
frontend/src/components/graphs/: GraphInfo.vue  GraphWrapper.vue  LocationTrend.vue
frontend/src/components/graphs/templates/: LocationTrend.js  RegionTrend.js
frontend/src/components/tabs/: InformationTab.vue  PointLayerLegend.vue  SubstanceTab.vue
frontend/src/plugins/: vue-tour.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/utils/: colors.js
frontend/src/views/: TrendView.vue
