[tool.poetry]
name = "chemtrend"
version = "0.1.0"
description = ""
authors = ["CindyvdVries <cindyvdvries@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
databases = "^0.9.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"